Fixing symlink creation to work with paths with spaces
Also reading error output and throwing an exception if need be.
Fixes b.android.com/221589

Change-Id: I50a758c7f767c00ac8e0ff9f63dca6865a28c9a2